Current:
Ryan C. Gordon (icculus.org) - Sat Feb 14 20:28:17 EST 2004
 * Respect new "tail" behaviour in image/setup.sh
Ryan C. Gordon (icculus.org) - Sat Feb 14 20:28:17 EST 2004
 * AMD64 patch in image/setup.sh
Ludwig Nussel - Ludwig Nussel - Sat Feb  7 21:44:57 PST 2004
 * Various bugfixes
Ludwig Nussel (ludwig.nussel@web.de) - Tue Jan 13 19:19:15 PST 2004
 * Various bugfixes for legacy support.
Stephane Peter (Codehost) - Tue Sep 23 21:00:18 PDT 2003
 * Added post_install_msg element.
Stephane Peter (Codehost) - Wed Aug 13 17:48:51 PDT 2003
 * Allow "keepdirs" attribute for README and EULA
Stephane Peter (Codehost) - Mon Jul 28 19:55:15 PDT 2003
 * Added the "reinstall" attribute for options, as well as a warning
   to the user when reinstalling. Also export SETUP_REINSTALL in scripts.
 * Added it to the "exclusive" tag as well, for exclusive options.
 * Remove existing binary files before replacing them, to try to avoid
   "file busy" errors.
Stephane Peter (Codehost) - Mon Jul 28 19:55:15 PDT 2003
 * Added the "reinstall" attribute for options, as well as a warning
   to the user when reinstalling.
Stephane Peter (Codehost) - Mon May 12 15:24:32 PDT 2003
 * Added the "category" attribute for the root install element, to
   specify the menu category on newer systems (Gnome 2.0)
Ryan C. Gordon (icculus.org) - Mon Apr 14 00:26:11 EDT 2003
 * Fixed DNS lookups and some other stuff in network.c.
Stephane Peter (Codehost) - Thu Apr  3 19:31:16 PST 2003
 * Ported to Solaris 8 on Intel.
Stephane Peter (Codehost) - Mon Mar 31 19:26:17 PST 2003
 * Added support for per-component uninstall scripts.
 * Added per-component uninstall messages.
Stephane Peter (Codehost) - Tue Feb 11 20:33:32 PST 2003
 * Added the 'environment' tag to store the values of
   environment variables.
Ryan C. Gordon (icculus.org) - Tue Jan 14 23:46:31 EST 2003
 * Committed initial MacOS X patches to CVS on behalf of Jon C.
Stephane Peter (Codehost) - Fri Dec  6 16:31:27 PST 2002